--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -695,9 +695,11 @@ a {
 }
 .cid-s48udlf8KU .mbr-section-title {
   text-align: left;
+  color: #000000;
 }
 .cid-s48udlf8KU .mbr-section-subtitle {
   text-align: left;
+  color: #000000;
 }
 .cid-sbJDdfTvuy {
   padding-top: 6rem;
